--- a/Ex_NaverAPI/app/src/main/res/layout/activity_naver.xml
+++ b/Ex_NaverAPI/app/src/main/res/layout/activity_naver.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:textSize="20dp"
         android:text="임시결과 출력장소"
+        android:visibility="gone"
         android:id="@+id/text_result"/>
 
 </LinearLayout>
