--- a/Ex_NaverAPI/app/src/main/res/layout/book_item.xml
+++ b/Ex_NaverAPI/app/src/main/res/layout/book_item.xml
@@ -9,28 +9,26 @@
         android:layout_width="150dp"
         android:layout_height="200dp"
         android:src="@mipmap/ic_launcher_round"
-        android:scaleType="fitXY"/>
+        android:scaleType="fitXY"
+        android:id="@+id/book_image"/>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="10dp">
+        android:padding="15dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="제목"
             android:textColor="#00f"
-            android:textSize="30dp"
             android:id="@+id/book_title"/>
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="저자"
-            android:textSize="30dp"
-            android:textColor="#00f"
             android:id="@+id/book_author" />
 
         <TextView
@@ -38,7 +36,6 @@
             android:layout_height="wrap_content"
             android:text="가격"
             android:textColor="#00f"
-            android:textSize="30dp"
             android:id="@+id/book_price"/>
 
 
