--- a/Ex_NaverAPI/app/src/main/res/layout/activity_naver.xml
+++ b/Ex_NaverAPI/app/src/main/res/layout/activity_naver.xml
@@ -17,7 +17,8 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:hint="input text"
-            android:id="@+id/search"/>
+            android:id="@+id/search"
+            android:imeOptions="actionSearch"/>
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -39,5 +40,15 @@
         android:text="임시결과 출력장소"
         android:visibility="gone"
         android:id="@+id/text_result"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"
+        android:background="#70aaaaff"
+        android:gravity="center">
+        <ProgressBar
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
 
+    </LinearLayout>
 </LinearLayout>
