--- a/Ex_0722/app/src/main/res/layout/activity_drawer.xml
+++ b/Ex_0722/app/src/main/res/layout/activity_drawer.xml
@@ -82,7 +82,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="서랍 닫기"
-            android:id="@id/btn_close" />
+            android:id="@+id/btn_close2" />
 
     </LinearLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
